# secture-cortex

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/core/: logging.py  security.py
backend/app/models/: __init__.py  agent_config.py  base.py  client_profile.py  context_chunk.py  context_file.py  conversation_event.py  insight.py  meeting.py  meeting_output.py  project.py  sentiment_point.py  transcription.py  user.py
backend/app/repositories/: context_file.py  meeting.py  project.py  user.py
backend/app/schemas/: agent.py  context_file.py  conversation.py  insight.py  meeting.py  meeting_output.py  project.py  transcription.py  user.py
backend/app/services/: agent_pipeline.py  chunking.py  deepgram.py  embeddings.py  extraction.py  indexing.py  llm.py  meeting_indexer.py  meeting_manager.py  project_analytics.py  rag.py
backend/app/ws/: transcription.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_context_files.py  003_context_chunks.py  004_meetings.py  005_insights.py  006_transcriptions.py  (+5 more)
backend/tests/: conftest.py  test_access_control.py  test_agent_pipeline.py  test_agent_tools.py  test_auth.py  test_context_files.py  test_conversation_intel.py  test_extraction.py  test_health.py  test_indexing.py  test_meetings.py  test_post_meeting.py  test_project_analytics.py  test_projects.py  test_rag_pipeline.py  test_reindex.py
(+98 files in other folders)
